Ottimizzazioni performance: aggiunto width/height alle immagini e ottimizzato forced reflows in JavaScript

--- a/allarmi.html
+++ b/allarmi.html
@@ -371,7 +371,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <a href="index.html" class="logo-link">
-                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image">
+                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image" width="47" height="40">
                         <div class="logo-text">
                             <span class="logo-title">FB Total Security</span>
                             <p class="tagline" data-translate="tagline">Creatori di Sicurezza</p>
@@ -458,7 +458,7 @@
                     </div>
                 </div>
                 <div class="service-image">
-                    <img src="icons/placeholder1-svg-ITLgroup.webp" alt="Sistema di Allarmi ITL Group" class="service-img" style="width: 100%; height: auto;">
+                    <img src="icons/placeholder1-svg-ITLgroup.webp" alt="Sistema di Allarmi ITL Group" class="service-img" style="width: 100%; height: auto;" width="600" height="400">
                 </div>
             </div>
         </div>
@@ -474,7 +474,7 @@
             <div class="partners-grid">
                 <div class="partner-card featured-partner">
                     <div class="partner-logo">
-                        <img src="icons/itlgroup-logo-carosello-homepage.webp" alt="ITL Group - Leader Sistemi Allarmi Milano" loading="lazy">
+                        <img src="icons/itlgroup-logo-carosello-homepage.webp" alt="ITL Group - Leader Sistemi Allarmi Milano" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-info">
                         <h3 data-translate="allarmi-partner-name">ITL Group</h3>
@@ -580,7 +580,7 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-image">
-                    <img src="icons/placeholder2-svg-ITLgroup.webp" alt="Tipologie di Sistemi Allarme ITL Group" class="service-img" style="width: 100%; height: auto;">
+                    <img src="icons/placeholder2-svg-ITLgroup.webp" alt="Tipologie di Sistemi Allarme ITL Group" class="service-img" style="width: 100%; height: auto;" width="600" height="400">
                 </div>
                 <div class="service-text">
                     <h3 data-translate="allarmi-types-title">Tipologie di Sistemi</h3>
@@ -675,10 +675,10 @@
                     <div class="installation-carousel">
                         <div class="carousel-container">
                             <div class="carousel-slide active">
-                                <img src="icons/installazione1-ITLgroup.webp" alt="Processo di Installazione Allarmi - Fase 1" class="carousel-img">
+                                <img src="icons/installazione1-ITLgroup.webp" alt="Processo di Installazione Allarmi - Fase 1" class="carousel-img" width="400" height="300">
                             </div>
                             <div class="carousel-slide">
-                                <img src="icons/installazione2-ITLgroup.webp" alt="Processo di Installazione Allarmi - Fase 2" class="carousel-img">
+                                <img src="icons/installazione2-ITLgroup.webp" alt="Processo di Installazione Allarmi - Fase 2" class="carousel-img" width="400" height="300">
                             </div>
                         </div>
                         <div class="carousel-controls">
