--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -139,7 +139,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <a href="index.html" class="logo-link">
-                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image">
+                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image" width="47" height="40">
                         <div class="logo-text">
                             <span class="logo-title">FB Total Security</span>
                             <p class="tagline" data-translate="tagline">Creatori di Sicurezza</p>
@@ -213,7 +213,7 @@
                     </p>
                 </div>
                 <div class="service-image">
-                    <img src="icons/placeholder1-chisiamo.webp" alt="La nostra storia" class="service-image" style="width: 100%; height: auto;">
+                    <img src="icons/placeholder1-chisiamo.webp" alt="La nostra storia" class="service-image" style="width: 100%; height: auto;" width="600" height="400">
                 </div>
             </div>
         </div>
@@ -226,17 +226,17 @@
             <p class="section-subtitle" data-translate="chi-siamo-valori-subtitle">Principi che guidano ogni nostro intervento</p>
             <div class="features-grid">
                 <div class="feature">
-                    <img src="icons/esperienza.webp" alt="Icona Esperienza" class="feature-large-image">
+                    <img src="icons/esperienza.webp" alt="Icona Esperienza" class="feature-large-image" width="80" height="80">
                     <h3 data-translate="chi-siamo-valore1-title">Agenzia Autorizzata</h3>
                     <p data-translate="chi-siamo-valore1-desc">Siamo un'agenzia ufficialmente autorizzata con tutte le certificazioni necessarie per operare nel settore della sicurezza. Le nostre competenze spaziano dai sistemi residenziali a quelli commerciali e industriali, sempre nel rispetto delle normative vigenti.</p>
                 </div>
                 <div class="feature">
-                    <img src="icons/tecnologie.webp" alt="Icona Tecnologie" class="feature-large-image">
+                    <img src="icons/tecnologie.webp" alt="Icona Tecnologie" class="feature-large-image" width="80" height="80">
                     <h3 data-translate="chi-siamo-valore2-title">Partnership Esclusive</h3>
                     <p data-translate="chi-siamo-valore2-desc">Manteniamo rapporti diretti e partnership esclusive con i leader mondiali del settore sicurezza. Questi mandati diretti ci permettono di accedere alle tecnologie più avanzate e di offrire prodotti certificati con garanzie estese e supporto tecnico specializzato.</p>
                 </div>
                 <div class="feature">
-                    <img src="icons/assistenza.webp" alt="Icona Assistenza" class="feature-large-image">
+                    <img src="icons/assistenza.webp" alt="Icona Assistenza" class="feature-large-image" width="80" height="80">
                     <h3 data-translate="chi-siamo-valore3-title">Assistenza Continua</h3>
                     <p data-translate="chi-siamo-valore3-desc">Il nostro supporto non finisce con l'installazione. Offriamo assistenza tecnica continua, interventi di emergenza 24/7 e manutenzione programmata per garantire sempre la massima efficienza dei tuoi sistemi.</p>
                 </div>
