--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <div class="partnership-carousel">
                 <div class="carousel-track">
                     <div class="partner-logo">
-                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS Logo" loading="lazy" />
+                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS Logo" loading="lazy" width="80" height="26" />
                     </div>
                     <div class="partner-logo">
                         <img src="icons/itlgroup-logo-carosello-homepage_small.webp" alt="ITL Group Logo" loading="lazy" width="67" height="26" />
@@ -326,11 +326,11 @@
                         <img src="icons/XECUR-logo-carosello-homepage_small.webp" alt="Xecur SRL Logo" loading="lazy" width="49" height="26" />
                     </div>
                     <div class="partner-logo">
-                        <img src="icons/URfog-logo-carosello-homepage.webp" alt="UR Fog Logo" loading="lazy" />
+                        <img src="icons/URfog-logo-carosello-homepage.webp" alt="UR Fog Logo" loading="lazy" width="67" height="26" />
                     </div>
                     <!-- Duplicati per loop seamless -->
                     <div class="partner-logo">
-                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS Logo" loading="lazy" />
+                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS Logo" loading="lazy" width="80" height="26" />
                     </div>
                     <div class="partner-logo">
                         <img src="icons/itlgroup-logo-carosello-homepage_small.webp" alt="ITL Group Logo" loading="lazy" width="67" height="26" />
@@ -339,7 +339,7 @@
                         <img src="icons/XECUR-logo-carosello-homepage_small.webp" alt="Xecur SRL Logo" loading="lazy" width="49" height="26" />
                     </div>
                     <div class="partner-logo">
-                        <img src="icons/URfog-logo-carosello-homepage.webp" alt="UR Fog Logo" loading="lazy" />
+                        <img src="icons/URfog-logo-carosello-homepage.webp" alt="UR Fog Logo" loading="lazy" width="67" height="26" />
                     </div>
                 </div>
             </div>
@@ -592,10 +592,10 @@
                         <div class="allarmi-carousel">
                             <div class="carousel-container">
                                 <div class="carousel-slide active">
-                                    <img src="icons/placeholder1-svg-ITLgroup.webp" alt="Sistema di Allarmi - Componenti" class="carousel-img" loading="lazy">
+                                    <img src="icons/placeholder1-svg-ITLgroup.webp" alt="Sistema di Allarmi - Componenti" class="carousel-img" loading="lazy" width="400" height="300">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="icons/placeholder2-svg-ITLgroup.webp" alt="Sistema di Allarmi - Installazione" class="carousel-img" loading="lazy">
+                                    <img src="icons/placeholder2-svg-ITLgroup.webp" alt="Sistema di Allarmi - Installazione" class="carousel-img" loading="lazy" width="400" height="300">
                                 </div>
                             </div>
                             <div class="carousel-controls">
@@ -617,17 +617,17 @@
                 <h2 class="section-title" data-translate="why-choose-title">Perchè scegliere FB Total Security</h2>
                 <div class="features-grid">
                     <div class="feature">
-                        <img src="icons/esperienza.webp" alt="Esperienza Pluriennale Sicurezza Milano - Oltre 20 Anni Settore" class="feature-large-image" loading="lazy">
+                        <img src="icons/esperienza.webp" alt="Esperienza Pluriennale Sicurezza Milano - Oltre 20 Anni Settore" class="feature-large-image" loading="lazy" width="80" height="80">
                         <h3 data-translate="why-choose-feature-1-title">Anni di Esperienza Multisettoriale</h3>
                         <p data-translate="why-choose-feature-1-desc">Anni di esperienza multisettoriale specializzata nella risoluzione e integrazione delle migliori soluzioni per il cliente</p>
                     </div>
                     <div class="feature">
-                        <img src="icons/tecnologie.webp" alt="Tecnologie Avanzate Sicurezza - Certificazioni Professionali Milano" class="feature-large-image" loading="lazy">
+                        <img src="icons/tecnologie.webp" alt="Tecnologie Avanzate Sicurezza - Certificazioni Professionali Milano" class="feature-large-image" loading="lazy" width="80" height="80">
                         <h3 data-translate="why-choose-feature-2-title">Certificazioni Professionali</h3>
                         <p data-translate="why-choose-feature-2-desc">Agenzia autorizzata con partnership dirette con i migliori brand del settore</p>
                     </div>
                     <div class="feature">
-                        <img src="icons/assistenza.webp" alt="Assistenza 24/7 Milano - Supporto Tecnico Continuo Sicurezza" class="feature-large-image" loading="lazy">
+                        <img src="icons/assistenza.webp" alt="Assistenza 24/7 Milano - Supporto Tecnico Continuo Sicurezza" class="feature-large-image" loading="lazy" width="80" height="80">
                         <h3 data-translate="why-choose-feature-3-title">Assistenza 24/7</h3>
                         <p data-translate="why-choose-feature-3-desc">Supporto tecnico continuo e interventi di emergenza per garantire sempre la tua sicurezza</p>
                     </div>
