--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -151,7 +151,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <a href="index.html" class="logo-link">
-                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image">
+                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image" width="47" height="40">
                         <div class="logo-text">
                             <span class="logo-title">FB Total Security</span>
                             <p class="tagline" data-translate="tagline">Creatori di Sicurezza</p>
@@ -296,7 +296,7 @@
             <div class="partners-grid">
                 <div class="partner-card featured-partner">
                     <div class="partner-logo">
-                        <img src="icons/URfog-logo-carosello-homepage.webp" alt="URfog - Leader Sistemi Nebbiogeni Milano" loading="lazy">
+                        <img src="icons/URfog-logo-carosello-homepage.webp" alt="URfog - Leader Sistemi Nebbiogeni Milano" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-info">
                         <h3 data-translate="partner-urfog-title">URfog</h3>
