--- a/serramenti.html
+++ b/serramenti.html
@@ -381,7 +381,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <a href="index.html" class="logo-link">
-                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image">
+                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image" width="47" height="40">
                         <div class="logo-text">
                             <span class="logo-title">FB Total Security</span>
                             <p class="tagline" data-translate="tagline">Creatori di Sicurezza</p>
@@ -525,7 +525,7 @@
             <div class="partners-grid">
                 <div class="partner-card featured-partner">
                     <div class="partner-logo">
-                        <img src="icons/XECUR-logo-carosello-homepage.webp" alt="XECUR - Leader Serramenti Sicurezza Milano" loading="lazy">
+                        <img src="icons/XECUR-logo-carosello-homepage.webp" alt="XECUR - Leader Serramenti Sicurezza Milano" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-info">
                         <h3 data-translate="serramenti-partner-name">XECUR</h3>
@@ -654,22 +654,22 @@
                     <div class="serramenti-carousel">
                         <div class="carousel-container">
                             <div class="carousel-slide active">
-                                <img src="icons/AliceV1Anta.webp" alt="Alice V1 Anta - Serramento di Sicurezza" loading="lazy">
+                                <img src="icons/AliceV1Anta.webp" alt="Alice V1 Anta - Serramento di Sicurezza" loading="lazy" width="300" height="400">
                             </div>
                             <div class="carousel-slide">
-                                <img src="icons/AliceV2bAnte.webp" alt="Alice V2 2 Ante - Serramento di Sicurezza" loading="lazy">
+                                <img src="icons/AliceV2bAnte.webp" alt="Alice V2 2 Ante - Serramento di Sicurezza" loading="lazy" width="300" height="400">
                             </div>
                             <div class="carousel-slide">
-                                <img src="icons/AlicePlusPignaContiaSestoRibassato.webp" alt="Alice Plus Pigna Contia Sesto Ribassato" loading="lazy">
+                                <img src="icons/AlicePlusPignaContiaSestoRibassato.webp" alt="Alice Plus Pigna Contia Sesto Ribassato" loading="lazy" width="300" height="400">
                             </div>
                             <div class="carousel-slide">
-                                <img src="icons/AlicePlusAlfaTondo3Ante.webp" alt="Alice Plus Alfa Tondo 3 Ante" loading="lazy">
+                                <img src="icons/AlicePlusAlfaTondo3Ante.webp" alt="Alice Plus Alfa Tondo 3 Ante" loading="lazy" width="300" height="400">
                             </div>
                             <div class="carousel-slide">
-                                <img src="icons/AliceLightAlfaTondo1.webp" alt="Alice Light Alfa Tondo 1" loading="lazy">
+                                <img src="icons/AliceLightAlfaTondo1.webp" alt="Alice Light Alfa Tondo 1" loading="lazy" width="300" height="400">
                             </div>
                             <div class="carousel-slide">
-                                <img src="icons/alicebeta.webp" alt="Alice Beta - Serramento di Sicurezza" loading="lazy">
+                                <img src="icons/alicebeta.webp" alt="Alice Beta - Serramento di Sicurezza" loading="lazy" width="300" height="400">
                             </div>
                         </div>
                         <div class="carousel-controls">
