--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -326,7 +326,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <a href="index.html" class="logo-link">
-                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image">
+                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image" width="47" height="40">
                         <div class="logo-text">
                             <span class="logo-title">FB Total Security</span>
                             <p class="tagline" data-translate="tagline">Creatori di Sicurezza</p>
@@ -395,7 +395,7 @@
             <div class="partners-grid">
                 <div class="partner-card featured-partner">
                     <div class="partner-logo">
-                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS - Leader Videosorveglianza Avanzata Milano" loading="lazy">
+                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS - Leader Videosorveglianza Avanzata Milano" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-info">
                         <h3 data-translate="sorveglianza-civis-title">CIVIS</h3>
@@ -582,7 +582,7 @@
             <div class="service-content">
                 <div class="service-image">
                     <div class="image-placeholder">
-                        <img src="icons/CIVIS-placeholder2.webp" alt="Tipologie di Sistemi di Videosorveglianza" class="service-main-image">
+                        <img src="icons/CIVIS-placeholder2.webp" alt="Tipologie di Sistemi di Videosorveglianza" class="service-main-image" width="600" height="400">
                     </div>
                 </div>
                 <div class="service-text">
@@ -679,7 +679,7 @@
                 </div>
                 <div class="service-image">
                     <div class="image-placeholder">
-                        <img src="icons/CIVIS-placeholder3-installazione.webp" alt="Installazione Professionale" class="service-main-image">
+                        <img src="icons/CIVIS-placeholder3-installazione.webp" alt="Installazione Professionale" class="service-main-image" width="600" height="400">
                     </div>
                 </div>
             </div>
