--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <noscript><link rel="stylesheet" href="styles.css"></noscript>
     
     <!-- Preload and async load Google Fonts -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=optional" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=optional" rel="stylesheet"></noscript>
     
     <!-- Resource Hints for Performance -->
     <!-- <link rel="dns-prefetch" href="//www.google-analytics.com"> -->
