Fix navbar functionality and optimize performance - Fixed JavaScript syntax errors in minification process - Resolved navbar click responsiveness issues - Added performance optimization scripts (CLS, forced reflow, preload warnings) - Optimized images with super-compressed versions - Added CSS and JS minification tools - Improved mobile menu functionality - Added debug and test files for troubleshooting

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -92,7 +92,7 @@
     <link rel="preload" href="icons/placeholder1-chisiamo.webp" as="image" fetchpriority="high">
     
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -454,7 +454,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
     <!-- Fix per i bottoni non rispondenti -->
     <script src="fix-buttons.js"></script>
     <script src="js/utm-tracking.js" defer></script>
