--- a/test-translation.html
+++ b/test-translation.html
@@ -30,7 +30,7 @@
         <div id="debug-info"></div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
     <script>
         // Additional debug info
         document.addEventListener('DOMContentLoaded', function() {
