--- a/debug-buttons.html
+++ b/debug-buttons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debug Bottoni Chi Siamo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css">
 </head>
 <body>
     <div class="container" style="padding: 2rem; background: #000; min-height: 100vh;">
@@ -61,7 +61,7 @@
     </div>
     
     <!-- Include lo stesso JavaScript della pagina originale -->
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
     
     <script>
         console.log('🔍 Debug page loaded');
