--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -15,7 +15,7 @@
     <link rel="alternate" hreflang="it" href="https://www.fbtotalsecurity.com/termini-condizioni.html?lang=it">
     <link rel="alternate" hreflang="en" href="https://www.fbtotalsecurity.com/termini-condizioni.html?lang=en">
     <link rel="alternate" hreflang="x-default" href="https://www.fbtotalsecurity.com/termini-condizioni.html">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -194,6 +194,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
 </body>
 </html>
