🚀 Ottimizzazioni PageSpeed Insights: CLS, accessibilità, performance
✅ Risolto CLS (Cumulative Layout Shift):
- Aggiunto min-height e contain al header per stabilità
- Ottimizzata navbar con altezza fissa e will-change
- Migliorata stabilità durante il caricamento

✅ Correzioni accessibilità:
- Cambiato H5 in H4 per ordine sequenziale delle intestazioni
- Migliorata struttura semantica della pagina

✅ Ottimizzazioni immagini:
- Aggiunti object-fit e aspect-ratio alle icone servizi
- Corrette proporzioni da 54x80 a 80x80 come richiesto

✅ Performance JavaScript:
- Rigenerato script.min.js con riduzione 36KB (18.6%)
- Mantenute ottimizzazioni anti-forced-reflow esistenti

✅ API deprecate:
- Rimosso font-size-adjust deprecato
- Sostituito con font-display: swap per migliori performance

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ img {
                         <div class="service-icon">
                             <picture>
                                 <source srcset="icons/nebbiogeni.webp" type="image/webp">
-                                <img src="icons/nebbiogeni.webp" alt="Sistemi Nebbiogeni Antifurto Milano - Protezione Istantanea" width="80" height="80" loading="lazy">
+                            <img src="icons/nebbiogeni.webp" alt="Sistemi Nebbiogeni Antifurto Milano - Protezione Istantanea" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
                             </picture>
                         </div>
                         <h3 data-translate="service-nebbiogeni-title">Nebbiogeni</h3>
@@ -324,7 +324,7 @@ img {
                         <div class="service-icon">
                             <picture>
                                 <source srcset="icons/serramenti.webp" type="image/webp">
-                                <img src="icons/serramenti.webp" alt="Serramenti Blindati Milano - Porte Sicurezza Antieffrazione" width="80" height="80" loading="lazy">
+                            <img src="icons/serramenti.webp" alt="Serramenti Blindati Milano - Porte Sicurezza Antieffrazione" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
                             </picture>
                         </div>
                         <h3 data-translate="service-serramenti-title">Serramenti di Sicurezza</h3>
@@ -335,7 +335,7 @@ img {
                         <div class="service-icon">
                             <picture>
                                 <source srcset="icons/sorveglianza.webp" type="image/webp">
-                                <img src="icons/sorveglianza.webp" alt="Videosorveglianza Milano - Telecamere IP Controllo Remoto" width="80" height="80" loading="lazy">
+                            <img src="icons/sorveglianza.webp" alt="Videosorveglianza Milano - Telecamere IP Controllo Remoto" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
                             </picture>
                         </div>
                         <h3 data-translate="service-sorveglianza-title">Sorveglianza</h3>
@@ -346,7 +346,7 @@ img {
                         <div class="service-icon">
                             <picture>
                                 <source srcset="icons/allarmi.webp" type="image/webp">
-                                <img src="icons/allarmi.webp" alt="Sistemi Allarme Milano - Antifurto Wireless Sensori" width="80" height="80" loading="lazy">
+                            <img src="icons/allarmi.webp" alt="Sistemi Allarme Milano - Antifurto Wireless Sensori" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
                             </picture>
                         </div>
                         <h3 data-translate="service-allarmi-title">Sistemi di Allarme</h3>
@@ -757,7 +757,7 @@ img {
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                 </svg>
                                 <div>
-                                    <h5 data-translate="contact-email-label">Email</h5>
+                                    <h4 data-translate="contact-email-label">Email</h4>
                                     <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
                                 </div>
                             </div>
@@ -766,7 +766,7 @@ img {
                                     <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                                 </svg>
                                 <div>
-                                    <h5 data-translate="contact-area-label">Zona di Servizio</h5>
+                                    <h4 data-translate="contact-area-label">Zona di Servizio</h4>
                                     <p data-translate="contact-area-text">Milano e provincia e Monza e Brianza e provincia</p>
                                 </div>
                             </div>
