Fix: Risolti problemi estetici su tablet - Aggiunto media query specifico per tablet (769px-1024px), corretto posizionamento selettore lingua e migliorata spaziatura contenuti

--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -93,8 +93,8 @@
     <link rel="prefetch" href="allarmi.html">
     
     <!-- Preload Critical Images for LCP -->
-    <link rel="preload" href="icons/logo_sito_franco.webp" as="image" fetchpriority="high">
-    <link rel="preload" href="icons/CIVIS-copertina.webp" as="image" fetchpriority="high">
+    <link rel="preload" href="icons/logo_sito_franco_small.webp" as="image" fetchpriority="high">
+    <link rel="preload" href="icons/CIVIS-copertina-optimized.webp" as="image" fetchpriority="high">
     
     <!-- Styles -->
     <link rel="stylesheet" href="styles.min.css">
@@ -325,7 +325,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <a href="index.html" class="logo-link">
-                        <img src="icons/logo_sito_franco.webp" alt="FB Total Security Logo" class="logo-image" width="47" height="40">
+                        <img src="icons/logo_sito_franco_small.webp" alt="FB Total Security Logo" class="logo-image" loading="eager" width="47" height="40">
                         <div class="logo-text">
                             <span class="logo-title">FB Total Security</span>
                             <p class="tagline" data-translate="tagline">Creatori di Sicurezza</p>
@@ -342,13 +342,13 @@
                         <span class="flag-icon">🇬🇧</span> EN
                     </button>
                 </div>
-                <ul class="nav-menu" id="nav-menu">
+                <ul class="nav-menu">
                     <li><a href="nebbiogeni.html" class="nav-link" data-translate="nav-nebbiogeni">Nebbiogeni</a></li>
                     <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti">Serramenti</a></li>
                     <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza">Sorveglianza</a></li>
                     <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi">Allarmi</a></li>
                     <li><a href="chi-siamo.html" class="nav-link" data-translate="nav-chi-siamo">Chi siamo</a></li>
-                    <li><a href="#contatti" class="nav-link cta" data-translate="nav-contatti">Contattaci</a></li>
+                    <li><a href="#contatti" class="nav-link cta" data-translate="nav-contatti">Contatti</a></li>
                     <li class="desktop-language-selector">
                         <div class="language-selector">
                             <button class="lang-btn active" data-lang="it">
@@ -363,7 +363,7 @@
                     </li>
 
                 </ul>
-                <div class="hamburger" id="hamburger">
+                <div class="hamburger">
                     <span></span>
                     <span></span>
                     <span></span>
