--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
       };
     </script>
     
+    <!-- Critical CSS inline per eliminare H1UserAgentFontSizeInSection warning -->
+    <style>
+        /* Stili critici per H1 - previene FOUC e avviso API deprecata */
+        :where(h1) {
+            font-size: clamp(2.5rem, 5vw, 4rem) !important;
+            font-weight: 700 !important;
+            line-height: 1.2 !important;
+            margin: 1.5rem 0 !important;
+            display: block !important;
+            font-family: 'Inter', 'Inter Fallback', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif !important;
+            font-display: swap;
+            min-height: 3rem;
+            contain: layout;
+        }
+        /* Stili espliciti per H1 in elementi di sezionamento */
+        :where(section h1, article h1, nav h1, aside h1) {
+            font-size: clamp(2.5rem, 5vw, 4rem) !important;
+            margin: 1.5rem 0 !important;
+            font-weight: 700 !important;
+            line-height: 1.2 !important;
+        }
+    </style>
+    
     <!-- Preload critical CSS -->
     <link rel="preload" href="styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="styles.min.css"></noscript>
