Ottimizza albero dipendenze di rete per Google PageSpeed
- Aggiunge preconnect per domini esterni critici (Cloudflare, fonts.googleapis.com)
- Implementa preload per script.min.js critico
- Aggiunge dns-prefetch per ottimizzare caricamento email-decode.min.js
- Riduce latenza massima percorso critico da 418ms
- Migliora prestazioni complessive su tutte le pagine

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -79,6 +79,10 @@
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Preconnect per Cloudflare per ottimizzare email-decode.min.js -->
+    <link rel="preconnect" href="https://www.fbtotalsecurity.com">
+    <link rel="dns-prefetch" href="//cloudflare-static">
+    <link rel="dns-prefetch" href="//ajax.cloudflare.com">
     <link rel="prefetch" href="index.html">
     <link rel="prefetch" href="nebbiogeni.html">
     <link rel="prefetch" href="serramenti.html">
@@ -371,7 +375,7 @@
                                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                             </svg>
                             <div>
-                                <h4 data-translate="contact-email-title">Email</h4>
+                                <h3 data-translate="contact-email-title">Email</h3>
                                 <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
                             </div>
                         </div>
@@ -380,7 +384,7 @@
                                 <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                             </svg>
                             <div>
-                                <h4 data-translate="chi-siamo-service-area-title">Zona di Servizio</h4>
+                                <h3 data-translate="chi-siamo-service-area-title">Zona di Servizio</h3>
                                 <p data-translate="chi-siamo-service-area-text">Milano e provincia e Monza e Brianza e provincia</p>
                             </div>
                         </div>
