--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -80,6 +80,10 @@
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Preconnect per Cloudflare per ottimizzare email-decode.min.js -->
+    <link rel="preconnect" href="https://www.fbtotalsecurity.com">
+    <link rel="dns-prefetch" href="//cloudflare-static">
+    <link rel="dns-prefetch" href="//ajax.cloudflare.com">
     <link rel="prefetch" href="index.html">
     <link rel="prefetch" href="serramenti.html">
     <link rel="prefetch" href="sorveglianza.html">
