--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Preconnect per Cloudflare per ottimizzare email-decode.min.js -->
+    <link rel="preconnect" href="https://www.fbtotalsecurity.com">
+    <link rel="dns-prefetch" href="//cloudflare-static">
+    <link rel="dns-prefetch" href="//ajax.cloudflare.com">
     <link rel="prefetch" href="nebbiogeni.html">
     <link rel="prefetch" href="serramenti.html">
     <link rel="prefetch" href="sorveglianza.html">
@@ -123,6 +127,9 @@
     <link rel="preload" href="icons/serramenti.webp" as="image" fetchpriority="high">
     <link rel="preload" href="icons/sorveglianza.webp" as="image" fetchpriority="high">
     <link rel="preload" href="icons/allarmi.webp" as="image" fetchpriority="high">
+    
+    <!-- Preload Critical JavaScript -->
+    <link rel="preload" href="script.min.js" as="script">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -341,7 +348,7 @@ img {
                         </div>
                         <h3 data-translate="service-nebbiogeni-title">Nebbiogeni</h3>
                         <p data-translate="service-nebbiogeni-desc">Sistemi di nebbiogeni per protezione immediata contro intrusioni e furti</p>
-                        <span class="service-link" data-translate="service-link">Sistemi Nebbiogeni Milano</span>
+                        <span class="service-link" data-translate="service-nebbiogeni-link">Sistemi Nebbiogeni Milano</span>
                     </a>
                     <a href="serramenti.html" class="service-card serramenti-card">
                         <div class="service-icon">
@@ -352,7 +359,7 @@ img {
                         </div>
                         <h3 data-translate="service-serramenti-title">Serramenti di Sicurezza</h3>
                         <p data-translate="service-serramenti-desc">Porte blindate, finestre antieffrazione e serramenti ad alta sicurezza</p>
-                        <span class="service-link" data-translate="service-link">Serramenti Blindati Milano</span>
+                        <span class="service-link" data-translate="service-serramenti-link">Serramenti Blindati Milano</span>
                     </a>
                     <a href="sorveglianza.html" class="service-card sorveglianza-card">
                         <div class="service-icon">
@@ -363,7 +370,7 @@ img {
                         </div>
                         <h3 data-translate="service-sorveglianza-title">Sorveglianza</h3>
                         <p data-translate="service-sorveglianza-desc">Centrale operativa certificata, pronto intervento con GPG armate 24/7, Custodia chiavi e collegamento con centrale operativa, e integrazione completa con AI</p>
-                        <span class="service-link" data-translate="service-link">Videosorveglianza Milano</span>
+                        <span class="service-link" data-translate="service-sorveglianza-link">Videosorveglianza Milano</span>
                     </a>
                     <a href="allarmi.html" class="service-card allarmi-card">
                         <div class="service-icon">
@@ -374,7 +381,7 @@ img {
                         </div>
                         <h3 data-translate="service-allarmi-title">Sistemi di Allarme</h3>
                         <p data-translate="service-allarmi-desc">Centrali antifurto, sensori perimetrali e sistemi di allarme wireless</p>
-                        <span class="service-link" data-translate="service-link">Sistemi Allarme Milano</span>
+                        <span class="service-link" data-translate="service-allarmi-link">Sistemi Allarme Milano</span>
                     </a>
                 </div>
             </div>
@@ -780,7 +787,7 @@ img {
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                 </svg>
                                 <div>
-                                    <h4 data-translate="contact-email-label">Email</h4>
+                                    <h3 data-translate="contact-email-label">Email</h3>
                                     <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
                                 </div>
                             </div>
@@ -789,7 +796,7 @@ img {
                                     <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                                 </svg>
                                 <div>
-                                    <h4 data-translate="contact-area-label">Zona di Servizio</h4>
+                                    <h3 data-translate="contact-area-label">Zona di Servizio</h3>
                                     <p data-translate="contact-area-text">Milano e provincia e Monza e Brianza e provincia</p>
                                 </div>
                             </div>
