--- a/allarmi.html
+++ b/allarmi.html
@@ -80,10 +80,13 @@
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Preconnect per Cloudflare per ottimizzare email-decode.min.js -->
+    <!-- Preconnect ottimizzati per Cloudflare email-decode.min.js -->
     <link rel="preconnect" href="https://www.fbtotalsecurity.com">
+    <link rel="preconnect" href="https://ajax.cloudflare.com" crossorigin>
     <link rel="dns-prefetch" href="//cloudflare-static">
     <link rel="dns-prefetch" href="//ajax.cloudflare.com">
+    <!-- Preload email-decode.min.js per ridurre latenza -->
+    <link rel="preload" href="https://ajax.cloudflare.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js" as="script" crossorigin>
     <link rel="prefetch" href="index.html">
     <link rel="prefetch" href="nebbiogeni.html">
     <link rel="prefetch" href="serramenti.html">
