Fix: Risolti problemi SEO link non scansionabili
- Rimosso prefetch Cloudflare email-decode.min.js che causava link senza href
- Eliminati preconnect e dns-prefetch per ajax.cloudflare.com
- Mantenuti preconnect per fonts.googleapis.com per performance
- Tutti i link email ora hanno href mailto: appropriati
- Risolto problema 'I link non possono essere sottoposti a scansione'
- Ottimizzata latenza rimuovendo dipendenze Cloudflare non necessarie

--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -87,13 +87,9 @@
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Preconnect ottimizzati per Cloudflare email-decode.min.js -->
+    <!-- Preconnect ottimizzati per performance -->
     <link rel="preconnect" href="https://www.fbtotalsecurity.com" crossorigin>
-    <link rel="preconnect" href="https://ajax.cloudflare.com" crossorigin>
-    <link rel="dns-prefetch" href="//cloudflare-static">
-    <link rel="dns-prefetch" href="//ajax.cloudflare.com">
-    <!-- Prefetch per ridurre latenza senza CORS -->
-    <link rel="prefetch" href="https://ajax.cloudflare.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
+    <!-- Rimosso prefetch Cloudflare email-decode per evitare problemi SEO con link non scansionabili -->
 
     <link rel="prefetch" href="index.html">
     <link rel="prefetch" href="nebbiogeni.html">
