Fix: Trasformati elementi email footer in link mailto cliccabili
- Convertiti elementi <li> e <p> con data-translate='footer-email' in link mailto funzionali
- Risolto problema SEO di link senza href
- Modificati file: serramenti.html, nebbiogeni.html, allarmi.html, sorveglianza.html, termini-condizioni.html
- Email footer ora cliccabile su tutte le pagine

--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -626,7 +626,7 @@
                     <h3 data-translate="footer-contacts-title">Contatti</h3>
                     <ul>
 
-                        <li data-translate="footer-email">📧 postmaster@fbtotalsecurity.com</li>
+                        <li><a href="mailto:postmaster@fbtotalsecurity.com" data-translate="footer-email">📧 postmaster@fbtotalsecurity.com</a></li>
                         <li data-translate="footer-address">📍 Corso Sempione, Milano (MI)</li>
 
                     </ul>
