--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -185,7 +185,7 @@
                 <div class="footer-section">
                     <h3 data-translate="footer-contacts-title">Contatti</h3>
                     <p data-translate="footer-location">📍 Milano e Provincia</p>
-                    <p data-translate="footer-email">✉️ postmaster@fbtotalsecurity.com</p>
+                    <p><a href="mailto:postmaster@fbtotalsecurity.com" data-translate="footer-email">✉️ postmaster@fbtotalsecurity.com</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
